--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,6 +32,9 @@
     <dimen name="cardview_corner_radius">5dp</dimen>
 
     <dimen name="title_text_size">40sp</dimen>
+    <dimen name="story_title_size">21sp</dimen>
+    <dimen name="story_subtitle_size">13sp</dimen>
+    <dimen name="story_text_size">13sp</dimen>
     <dimen name="app_name_fullscreen_text_size">160sp</dimen>
     <dimen name="hint_text_size">16sp</dimen>
     <dimen name="message_text_size">15sp</dimen>
