--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -6,7 +6,7 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     android:background="@color/colorGrayBackground"
-    tools:context="com.askoliv.oliv.ChatFragment">
+    tools:context="com.askoliv.app.ChatFragment">
 
     <ListView
         android:id="@+id/listview_messages"
@@ -115,12 +115,6 @@
             android:layout_centerVertical="true"/>
 
         </RelativeLayout>
-
-        <View
-            android:id="@+id/help_questions_shadow"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/drop_shadow_height"
-            android:background="@drawable/drop_shadow_up" />
 
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
