--- a/app/src/main/res/layout/help_question.xml
+++ b/app/src/main/res/layout/help_question.xml
@@ -34,7 +34,8 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:textSize="@dimen/message_text_size"
-                android:singleLine="false"/>
+                android:singleLine="false"
+                android:text="Sample Question?"/>
 
 
         </LinearLayout>
