--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--<color name="colorPrimary">#F64747</color>-->
+    <color name="colorBase">#d1000000</color>
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#d32f2f</color>
     <color name="colorAccentDark">#FFD21F</color>
     <color name="colorAccent">#ffe061</color>
     <color name="colorAccentLight">#FFEFAD</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorSecondary">#50514F</color>
+    <!--<color name="colorSecondary">#50514F</color>-->
+    <color name="colorSecondary">#d1000000</color>
     <color name="colorDisabled">#70716F</color>
     <color name="colorDivider">#ADAEAD</color>
     <color name="colorGrayBackground">#EBEBEA</color>
