--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,14 +1,19 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="title_text_size">18sp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin_broad">24dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin_narrow">8dp</dimen>
     <dimen name="activity_horizontal_margin_very_narrow">4dp</dimen>
+    <dimen name="activity_horizontal_margin_extremely_narrow">2dp</dimen>
     <dimen name="activity_vertical_margin_narrow">8dp</dimen>
     <dimen name="activity_vertical_margin_very_narrow">4dp</dimen>
+    <dimen name="activity_vertical_margin_extremely_narrow">2dp</dimen>
     <dimen name="text_padding">10dp</dimen>
     <dimen name="message_text_padding">4dp</dimen>
+    <dimen name="button_padding">4dp</dimen>
     <dimen name="appbar_padding_top">0dp</dimen>
     <dimen name="edit_text_width">270dp</dimen>
     <dimen name="icon_button_size">40dp</dimen>
@@ -16,6 +21,8 @@
     <dimen name="chat_side_padding">50dp</dimen>
     <dimen name="time_margin">8dp</dimen>
     <dimen name="help_vertical_padding">2dp</dimen>
+    <dimen name="chat_image_size">240dp</dimen>
+    <dimen name="chat_card_min_width">47dp</dimen>
 
     <dimen name="login_button_height">45dp</dimen>
     <dimen name="fb_login_vertical_padding">13dp</dimen>
@@ -27,16 +34,35 @@
     <dimen name="high_elevation">4dp</dimen>
     <dimen name="medium_elevation">2dp</dimen>
     <dimen name="low_elevation">1dp</dimen>
-    <dimen name="drop_shadow_height">2dp</dimen>
-    <dimen name="cardview_medium_elevation">2dp</dimen>
-    <dimen name="cardview_corner_radius">5dp</dimen>
+    <dimen name="drop_shadow_height">4dp</dimen>
+    <dimen name="cardview_medium_elevation">3dp</dimen>
+    <dimen name="cardview_corner_radius">1dp</dimen>
 
-    <dimen name="title_text_size">40sp</dimen>
-    <dimen name="story_title_size">21sp</dimen>
-    <dimen name="story_subtitle_size">13sp</dimen>
-    <dimen name="story_text_size">13sp</dimen>
-    <dimen name="app_name_fullscreen_text_size">160sp</dimen>
+    <dimen name="app_name_fullscreen_text_size">35sp</dimen>
     <dimen name="hint_text_size">16sp</dimen>
     <dimen name="message_text_size">15sp</dimen>
     <dimen name="message_timestamp_size">10sp</dimen>
+
+    <!--Tab Dimensions-->
+    <dimen name="tab_bar_height">56dp</dimen>
+    <dimen name="tab_icon_size">24dp</dimen>
+
+    <!--Story Image Dimension-->
+    <dimen name="story_pager_height">280dp</dimen>
+    <dimen name="story_pager_text_height">40dp</dimen>
+    <dimen name="story_pager_image_height">240dp</dimen>
+    <dimen name="story_title_size">20sp</dimen>
+    <dimen name="story_subtitle_size">12sp</dimen>
+    <dimen name="story_text_size">13sp</dimen>
+    <dimen name="story_author_size">11sp</dimen>
+    <dimen name="story_chat_related_button_text_size">14sp</dimen>
+    <dimen name="story_social_bar_text_size">14sp</dimen>
+    <dimen name="story_social_bar_height">36dp</dimen>
+    <dimen name="story_social_bar_width">120dp</dimen>
+    <dimen name="story_button_bar_width">280dp</dimen>
+    <dimen name="story_chat_related_padding">8dp</dimen>
+    <dimen name="story_chat_related_button_size">40dp</dimen>
+    <dimen name="story_chat_related_button_height">35dp</dimen>
+    <dimen name="story_chat_related_button_width">190dp</dimen>
+    <dimen name="story_card_elevation">1dp</dimen>
 </resources>
