--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="firebase_url">https://askoliv.firebaseio.com</string>
+    <string name="firebase_storage_url">gs://askoliv.appspot.com</string>
 
     <!-- Your Facebook App ID from your app settings on https://developers.facebook.com/ -->
     <string name="facebook_app_id">190754637961726</string>
+
+    <!-- Firebase dynamic link domain name-->
+    <string name="firebase_dynamic_link_domain">https://k2a92.app.goo.gl/</string>
 </resources>
